# PuzzlesBot

./: .replit  main.py  pyproject.toml  responses.py  rps.py
games/: __init__.py  cryptograms.py  guess_the_flag.py  guess_the_number.py  hangman.py  higher_or_lower.py  minesweeper.py  registry.py  rock_paper_scissors.py  sports_trivia.py  sudoku.py  who_sent_the_message.py  whos_that_pokemon.py  word_impostor.py  wordle.py
games/data/: countries.json  cryptogram_quotes.json  hangman_words.json  impostor_words.json  sudoku_puzzles.json  trends.json  wordle_words.json
scripts/: build_impostor_pairs.py  build_quotes_dataset.py  build_sudoku_puzzles.py  build_trends_dataset.py
